--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   },
   "dependencies": {
     "@types/node": "^18.15.10",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
+    "hnswlib-node": "^1.4.2",
     "js-yaml": "^4.1.0",
-    "langchain": "^0.0.96",
+    "langchain": "^0.0.148",
+    "pdf-parse": "^1.1.1",
     "typescript": "^5.0.2"
   },
   "devDependencies": {
